# ceph-ci

./: .gdb_history  .gitmodules  CMakeLists.txt  PendingReleaseNotes  README.md  ceph.spec.in  install-deps.sh
cmake/modules/: BuildBoost.cmake  BuildJaeger.cmake  BuildOpenTracing.cmake  Buildthrift.cmake  Buildyaml-cpp.cmake  boost_asio_static_variables.patch
debian/: control  libjaeger.install
doc/cephfs/: fs-volumes.rst
doc/radosgw/: lua-scripting.rst
qa/tasks/: ceph.py  ceph_fuse.py  ceph_iscsi.py  ceph_manager.py  ceph_test_case.py  cephfs_test_runner.py  qemu.py  vstart_runner.py
src/: CMakeLists.txt  vstart.sh
src/cephadm/: cephadm
src/client/: Client.cc  Client.h
src/common/: CMakeLists.txt  RefCountedObj.cc  WorkQueue.h  admin_socket.cc  buffer.cc  ceph_context.h  common_init.cc  config.cc  config.h  config_proxy.h  legacy_config_opts.h  options.cc  perf_counters.cc  tracer.cc  tracer.h  util.cc
src/compressor/: Compressor.cc  Compressor.h  CompressorClient.h  CompressorRegistry.cc  CompressorRegistry.h  CompressorServer.h
src/crimson/: CMakeLists.txt
src/include/: buffer.h  ceph_fs.h  config-h.in.cmake  encoding.h  interval_set.h  msgr.h
src/kv/: KeyValueDB.h  RocksDBStore.cc  RocksDBStore.h
src/librados/: IoCtxImpl.cc  librados_cxx.cc
src/librbd/: CMakeLists.txt  internal.cc  librbd.cc
src/mds/: CDir.cc  CDir.h  CInode.cc  CInode.h  MDBalancer.cc  MDBalancer.h  MDCache.cc  MDCache.h  MDSDaemon.cc  MDSRank.cc  MDSRank.h  MetricAggregator.cc  MetricsHandler.cc  OpenFileTable.cc  Server.cc  Server.h  (+4 more)
src/test/neorados/: CMakeLists.txt
(+351 files in other folders)
